--- a/src/app.html
+++ b/src/app.html
@@ -14,10 +14,11 @@
 			rel="stylesheet"
 		/>
 		<link rel="stylesheet" href="%sveltekit.assets%/app.css" />
+		
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
 	<body>
-		<div>%sveltekit.body%</div>
+		%sveltekit.body%
 	</body>
 </html>
