--- a/src/app.html
+++ b/src/app.html
@@ -6,15 +6,13 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap"
-			rel="stylesheet"
-		/>
-		<link
-			href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200;300&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&family=Roboto+Mono:wght@200;300&display=swap"
 			rel="stylesheet"
 		/>
 		<link rel="stylesheet" href="%sveltekit.assets%/app.css" />
 		<title>Blackkspydo</title>
+		<link rel="image_src" href="%sveltekit.assets%/preview.jpg" />
+		<meta name="description" content="Hi, I am Kishor, a Frontend Engineer from Nepal." />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
