--- a/src/app.html
+++ b/src/app.html
@@ -11,8 +11,9 @@
 		/>
 		<link rel="stylesheet" href="%sveltekit.assets%/app.css" />
 		<title>Blackkspydo</title>
-		<link rel="image_src" href="%sveltekit.assets%/preview.jpg" />
-		<meta name="description" content="Hi, I am Kishor, a Frontend Engineer from Nepal." />
+		<meta property="og:title" content="Blackkspydo" />
+		<meta property="og:description" content="Hi, I am Kishor, a Frontend Engineer from Nepal." />
+		<meta property="og:image" content="%sveltekit.assets%/preview.jpg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
