--- a/src/app.html
+++ b/src/app.html
@@ -10,10 +10,37 @@
 			rel="stylesheet"
 		/>
 		<link rel="stylesheet" href="%sveltekit.assets%/app.css" />
+
+		<!-- HTML Meta Tags -->
 		<title>Blackkspydo</title>
+		<meta
+			name="description"
+			content="Hi, I am Kishor, a Front-end Engineer from Nepal. I make website and web-portals."
+		/>
+
+		<!-- Facebook Meta Tags -->
+		<meta property="og:url" content="https://blackkspydo.com/" />
+		<meta property="og:type" content="website" />
 		<meta property="og:title" content="Blackkspydo" />
-		<meta property="og:description" content="Hi, I am Kishor, a Frontend Engineer from Nepal." />
-		<meta property="og:image" content="%sveltekit.assets%/preview.jpg" />
+		<meta
+			property="og:description"
+			content="Hi, I am Kishor, a Front-end Engineer from Nepal. I make website and web-portals."
+		/>
+		<meta property="og:image" content="https://blackkspydo.com/preview.jpg" />
+
+		<!-- Twitter Meta Tags -->
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta property="twitter:domain" content="blackkspydo.com" />
+		<meta property="twitter:url" content="https://blackkspydo.com/" />
+		<meta name="twitter:title" content="Blackkspydo" />
+		<meta
+			name="twitter:description"
+			content="Hi, I am Kishor, a Front-end Engineer from Nepal. I make website and web-portals."
+		/>
+		<meta name="twitter:image" content="https://blackkspydo.com/preview.jpg" />
+
+		<!-- Meta Tags Generated via https://www.opengraph.xyz -->
+
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
